fix: adda alt text to img on header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="cabecalho__container">
         <div class="cabecalho">
             <a href="" class="cabecalho__logo">
-                <img class="cabecalho__logo--icone" alt="" src="./img/logoprovisriabranca-1@2x.png" />
+                <img class="cabecalho__logo--icone" alt="Logo da Jornada" src="./img/logoprovisriabranca-1@2x.png" />
             </a>
             <div class="cabecalho__navegacao">
                 <a class="cabecalho__navegacao--item" href="">Blog</a>
